test_suite/tests/ui/unknown-attribute/field.stderr
error: unknown serde field attribute `abc`
 --> $DIR/field.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

